--- a/src/app/components/stand/stand.component.scss
+++ b/src/app/components/stand/stand.component.scss
@@ -1,10 +1,18 @@
-.stand-box {
-  position: absolute;
+:host {
+  position: absolute; 
+  display: block; 
+  
   width: 100px;
   height: 60px;
   border: 1px solid #333;
   cursor: move;
   background-color: #a7f3d0;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  color: #333;
 
   &.occupied {
     background-color: #fca5a5;
