--- a/src/app/components/map-container/map-container.component.html
+++ b/src/app/components/map-container/map-container.component.html
@@ -1,9 +1,9 @@
-<div class="map-area">
+<div class="map-area" #mapArea>
   <app-stand
     *ngFor="let stand of stands$ | async"
     [standData]="stand"
     (click)="selectStand(stand)"
-    cdkDrag [cdkDragFreeDragPosition]="stand.position" (cdkDragEnded)="onStandMoved($event, stand.id)" [ngClass]="stand.status">
+    cdkDrag [cdkDragFreeDragPosition]="stand.position" (cdkDragEnded)="onStandMoved($event, stand.id)" [ngClass]="stand.status" [cdkDragBoundary]="mapArea">
   </app-stand>
 </div>
 
