--- a/src/app/components/map-container/map-container.component.scss
+++ b/src/app/components/map-container/map-container.component.scss
@@ -1,4 +1,3 @@
-// Estilo para o componente como um todo
 :host {
   display: flex;
   flex-direction: column;
@@ -22,8 +21,13 @@
   overflow: hidden; 
 
   background-image: linear-gradient(rgba(0, 0, 0, 0.05) 1px, transparent 1px),
-    linear-gradient(90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px);
+  linear-gradient(90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px);
   background-size: 20px 20px;
+  cursor: grab; 
+
+  &.panning {
+    cursor: grabbing;
+  }
 }
 
 button {
