--- a/src/app/components/map-container/map-container.component.html
+++ b/src/app/components/map-container/map-container.component.html
@@ -1,6 +1,8 @@
 <div 
   class="map-area" 
   #mapArea
+  [ngStyle]="dynamicMapStyle"
+
   (wheel)="onWheel($event)"
   (mousedown)="onMouseDown($event)"
   (mousemove)="onMouseMove($event)"
@@ -8,7 +10,20 @@
   (mouseleave)="onMouseUp()"
   [class.panning]="isPanning">
 
+   <button class="reset-view-btn" (click)="resetView()" title="Resetar Zoom e Posição">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+      <path d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6H4c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8z"/>
+    </svg>    
+  </button> 
+
   <div class="map-content" [style.transform]="mapTransform">
+
+    <img 
+      *ngIf="mapBackgroundUrl" 
+      class="map-background-image" 
+      [src]="mapBackgroundUrl"
+      alt="Planta Baixa do Evento">
+
     <app-stand
       *ngFor="let stand of stands$ | async"
       [standData]="stand"
@@ -22,7 +37,19 @@
   </div>
 
 </div>
-<button (click)="openNewStandEditor()">Adicionar Stand</button>
+
+<div class="action-buttons">
+  <button (click)="openNewStandEditor()">Adicionar Stand</button>
+  <button (click)="triggerFileInput()">Carregar Imagem Planta</button>
+  <button (click)="removeBackground()" *ngIf="mapBackgroundUrl">Remover Planta</button>
+</div>
+
+<input 
+    type="file" 
+    hidden 
+    #fileInput 
+    (change)="onFileSelected($event)" 
+    accept="image/png, image/jpeg, image/svg+xml">
 
 <app-stand-editor *ngIf="selectedStand"
     [stand]="selectedStand"
