Corrige título do formulário, agora é dinâmico

--- a/src/app/components/stand-editor/stand-editor.component.html
+++ b/src/app/components/stand-editor/stand-editor.component.html
@@ -1,5 +1,5 @@
 <div class="editor-panel">
-    <h3>Editar Stand</h3>
+    <h3>{{ stand.id ? 'Editar Stand' : 'Adicionar Stand' }}</h3>
     <label>Nome:</label>
     <input [(ngModel)]="stand.name" />
 
